import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id 'application'
    id 'com.gradleup.shadow' version '9.4.2'
}

group = 'uk.ac.york.cs.puml2emfatic'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

application {
    mainClass = 'uk.ac.york.cs.puml2emfatic.cmd.Main'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation 'dev.langchain4j:langchain4j-open-ai:1.11.8'
    implementation 'dev.langchain4j:langchain4j:1.11.8'
    implementation 'io.github.cdimascio:dotenv-java:3.2.0'
    implementation 'ch.qos.logback:logback-classic:1.5.35'

    implementation 'info.picocli:picocli:4.7.7'
    annotationProcessor 'info.picocli:picocli-codegen:4.7.7'

    implementation 'org.eclipse.emfatic:org.eclipse.emfatic.core:1.1.0'
    implementation 'org.eclipse.platform:org.eclipse.core.resources:3.24.0'
    implementation 'org.eclipse.emf:org.eclipse.emf.ecore:2.23.0'
    implementation 'org.eclipse.emf:org.eclipse.emf.common:2.23.0'
    implementation 'org.eclipse.emf:org.eclipse.emf.ecore.xmi:2.16.0'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

shadowJar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    mergeServiceFiles()
    filesMatching('plugin.properties') {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
    }
    append('plugin.properties')
}

test {
    useJUnitPlatform()
}

compileJava {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}